2003-11-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure:
	* win/configure.in: define TK_LIB_FLAG, TK_LIB_SPEC,
	TK_BUILD_LIB_SPEC, TK_STUB_LIB_SPEC, TK_STUB_LIB_PATH, and
	TK_BUILD_STUB_LIB_PATH for tkConfig.sh [Bug #826614]

	* unix/Makefile.in (SHLIB_LD_FLAGS): include in Makefile as it is
	used in MAKE_LIB sometimes (ie: AIX-64) [Bug #829686] (jimix)

2003-11-10  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: correct yview handling of text widgets 
	containing no vertical pixels at all.
	
2003-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tclWinSend.c: Fixed an error returning the registered name.

2003-11-08  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/textDisp.test:
	* tests/text.test:
	* generic/tkText.h:
	* generic/tkTextIndex.c: 
	* generic/tkTextBTree.c:
	* generic/tkTextDisp.c: fix to another version of [Bug 833627]
	(crash in tkchat), adding more tests.  I believe the handling of
	nested elide tags of all types is now correct!
	
2003-11-07  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/textDisp.test:
	* generic/tkTextDisp.c: fix to another version of [Bug 833627]
	(crash in tkchat), adding two new tests. 
	
	* generic/tkText.c
	* generic/tkTextIndex.c
	* generic/tkTextDisp.c
	* generic/tkTextWind.c
	* generic/tkTextImage.c
	* generic/tkTextTag.c
	* generic/tkTextMark.c
	* generic/tkTextBTree.c
	* generic/tkText.h         
	* doc/text.n
	* tests/text.test
	* tests/textWind.test: better handling of 'elide' tags, especially
	during line layout, counting and forward/backward index movement.
	Added new tests to ensure correct behaviour with multiple tags of
	multiple priorities.

2003-11-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/nl.msg: Dutch messages from Arjen Markus [Patch 836368]
	* library/demos/widget: Added mechanism to support some l10n of
	the actual hotkeys used.

2003-11-04  Vince Darley <vincentdarley@users.sourceforge.net>
